<resources>
    <string name="app_name">iPlanner</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_to_register">Not a member? Sign up now.</string>
    <string name="btn_to_login">Log in instead.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Logout</string>
    <string name="name">Fullname</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_poilist">POIListActivity</string>
    <string name="home">Recommendations</string>
    <string name="itinerary">Itinerary</string>
    <string name="bookmark">Bookmarks</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Chat -->
    <string name="all_group_channels">Group Channels</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
