<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_white_18dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_itinerary"
        android:icon="@drawable/baseline_list_white_18dp"
        android:title="@string/itinerary" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/baseline_bookmark_white_18dp"
        android:title="@string/bookmark" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/baseline_chat_white_18dp"
        android:title="@string/chats" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_white_18dp"
        android:title="@string/profile" />

</menu>